# matter_extension

./: .gitmodules  README_IRIS_ROUTER.md
ThreadRouterLightApp/: lighting-app.slcp  lighting-app.slps
ThreadRouterLightApp/.bak/: source_and_include_paths.json
ThreadRouterLightApp/artifact/: lighting-app.s37
ThreadRouterLightApp/autogen/: linkerfile.icf  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sli_mbedtls_config_autogen.h
ThreadRouterLightApp/autogen/.slc_state/: .crc_config.crc
ThreadRouterLightApp/autogen/zap-generated/: CodeDrivenCallback.h  IMClusterCommandHandler.cpp  access.h  endpoint_config.h
ThreadRouterLightApp/cmake_gcc/: CMakeLists.txt  lighting-app.cmake  toolchain.cmake
ThreadRouterLightApp/cmake_iar/: lighting-app.cmake  toolchain.cmake
ThreadRouterLightApp/cmake_llvm/: CMakePresets.json  lighting-app.cmake
ThreadRouterLightApp/config/: btl_interface_cfg.h  sl_btctrl_config.h  sl_clock_manager_oscillator_config.h  sl_openthread_features_config.h  sl_rail_util_pa_tables_config.h
ThreadRouterLightApp/config/btconf/: slc_args.json
ThreadRouterLightApp/config/common/: slc_args.json
ThreadRouterLightApp2/: lighting-app.slcp  lighting-app.slpb  lighting-app.slps
ThreadRouterLightApp2/.bak/: source_and_include_paths.json
ThreadRouterLightApp2/autogen/: gen.properties  sl_bluetooth.c  sli_psa_builtin_config_autogen.h  sli_psa_config_autogen.h
ThreadRouterLightApp2/autogen/zap-generated/: CodeDrivenInitShutdown.cpp  gen_config.h
ThreadRouterLightApp2/cmake_gcc/: lighting-app.cmake
ThreadRouterLightApp2/cmake_iar/: lighting-app.cmake
ThreadRouterLightApp2/cmake_llvm/: lighting-app.cmake  toolchain.cmake
ThreadRouterLightApp2/config/: sl_bluetooth_config.h  sl_clock_manager_tree_config.h  sl_openthread_features_config.h  sl_rail_util_pti_config.h
ThreadRouterLightApp2/linker_options/: ot-rtos-wrapper-options
slc/component/matter-clusters/: matter_apple_device_information.slcc
slc/component/matter-thread/: matter_wed.slcc
src/app/zap-templates/: cluster-to-component-dependencies.json
(+8 files in other folders)
